--- a/tsurii_htmlcss2/index.html
+++ b/tsurii_htmlcss2/index.html
@@ -2,6 +2,17 @@
 <html lang="ja">
 
 <head>
+	
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-W1LZ44WZ1Z"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-W1LZ44WZ1Z');
+</script>
+
 	<!-- ページ情報 -->
 	<meta charset="utf-8">
 	<meta name="robots" content="noindex,nofollow">
